Fix incorrect flex grow/shrink attribute causing hidden overflow

--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ body {
 }
 
 .flex-row {
-	flex: 1 1 auto;
+	flex: 1 0 auto;
 	display: flex;
 	flex-direction: row;
 	margin: 0;
